Mit Colab erstellt

--- a/Intro to Python/BMG Workshop - Basic statistical analysis - Categorical variables.ipynb
+++ b/Intro to Python/BMG Workshop - Basic statistical analysis - Categorical variables.ipynb
@@ -83,7 +83,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "metadata": {
         "id": "b_I8kSOVO8Dh"
       },
@@ -104,13 +104,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 2,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "GeHFMYbcSdOS",
-        "outputId": "03f78696-8cb7-47e9-afb9-d04d5d0c6e11"
+        "outputId": "d820dcd9-550a-42c5-8d23-a46915a96dac"
       },
       "outputs": [
         {
@@ -144,13 +144,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 3,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "nu6CuZnWXee3",
-        "outputId": "39b75b9f-1f55-4239-da63-7b70bcc147d9"
+        "outputId": "54a9b560-7e83-4b00-f82b-13f4d06ae0ad"
       },
       "outputs": [
         {
@@ -177,13 +177,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 4,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "KT3GP9UMnNvV",
-        "outputId": "f8084a3a-48bf-4e1a-ea8d-41e249bdad68"
+        "outputId": "1985032a-1b21-4e4e-9463-d65971b30a3d"
       },
       "outputs": [
         {
@@ -210,13 +210,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 5,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "3TmonmHjqTAv",
-        "outputId": "3e9b37a6-5f3c-47db-ddbd-d704401386dd"
+        "outputId": "e544128f-8964-46a9-d9df-78b9039e616a"
       },
       "outputs": [
         {
@@ -244,13 +244,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 6,
       "metadata": {
         "id": "qdA2S_MJrC3z",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "3dd0d3dd-dbd9-4dd9-e30e-3634ed4932c4"
+        "outputId": "fd287ec8-cae1-4339-9fc4-255924e885c0"
       },
       "outputs": [
         {
@@ -278,13 +278,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 7,
       "metadata": {
         "id": "qI8O2uYIrh8U",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "03080e56-c55c-4698-b4d7-54a16618357e"
+        "outputId": "35a398ab-a4f7-43aa-8bae-8d286f0f64d9"
       },
       "outputs": [
         {
@@ -311,13 +311,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 8,
       "metadata": {
         "id": "69H3XqdzsvPM",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "9cd22ac5-5d5b-44b6-913b-0e0d315095ea"
+        "outputId": "0d9f8afc-ca62-4692-f238-4f60ca4192cb"
       },
       "outputs": [
         {
@@ -385,13 +385,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 9,
       "metadata": {
         "id": "ifdYOO10AfVV",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "bb058201-dfe9-40b3-c278-92e22d358845"
+        "outputId": "bc8224f0-5987-401c-86f7-132014c2d92c"
       },
       "outputs": [
         {
@@ -408,6 +408,7 @@
         }
       ],
       "source": [
+        "\n",
         "chi2_statistic, p_value, degrees_of_freedom, expected_frequencies = chi2_contingency(ct_cats)\n",
         "\n",
         "# Print the results\n",
@@ -440,9 +441,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "Somc_yU3-czQ",
-        "outputId": "2d9ed486-1e77-4901-bbf6-6b3c7477cf73"
+        "outputId": "63c687f6-8c56-4b72-e72f-d7d502e62977"
       },
-      "execution_count": null,
+      "execution_count": 10,
       "outputs": [
         {
           "output_type": "stream",
@@ -480,9 +481,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "mBuv2RPK3g-c",
-        "outputId": "3c9321e6-72c7-4934-8c77-fbe329c09a1c"
+        "outputId": "10b7aefe-8abd-4b62-c410-817d6dac82c6"
       },
-      "execution_count": null,
+      "execution_count": 11,
       "outputs": [
         {
           "output_type": "stream",
@@ -512,22 +513,23 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "DkRaSF33330j",
-        "outputId": "a4c91779-4c9f-4318-94e6-01da581e6056"
+        "outputId": "1ba1dcb9-0697-427e-d3b2-a3bfc5c3a2d8"
       },
-      "execution_count": null,
+      "execution_count": 12,
       "outputs": [
         {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "Chi2ContingencyResult(statistic=190.40110361683327, pvalue=4.999927529868003e-41, dof=3, expected_freq=array([[220.01363017, 104.98636983],\n",
-              "       [192.93502953,  92.06497047],\n",
-              "       [477.93730123, 228.06269877],\n",
-              "       [599.11403907, 285.88596093]]))"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 11
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Chi-square statistic: 190.40110361683327\n",
+            "P-value: 4.999927529868003e-41\n",
+            "Degrees of freedom: 3\n",
+            "Expected frequencies:\n",
+            "[[220.01363017 104.98636983]\n",
+            " [192.93502953  92.06497047]\n",
+            " [477.93730123 228.06269877]\n",
+            " [599.11403907 285.88596093]]\n"
+          ]
         }
       ]
     },
@@ -559,7 +561,7 @@
       "metadata": {
         "id": "rh9vFhDi42pO"
       },
-      "execution_count": null,
+      "execution_count": 13,
       "outputs": []
     },
     {
@@ -582,7 +584,7 @@
       "metadata": {
         "id": "i7-mAVqf4-SX"
       },
-      "execution_count": null,
+      "execution_count": 15,
       "outputs": []
     },
     {
@@ -599,9 +601,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "DoeshlFa5AIO",
-        "outputId": "139863ae-1e66-4466-c4b7-6f691ab42b0c"
+        "outputId": "7f0fd933-02db-4517-bd8a-7dc145140a6f"
       },
-      "execution_count": null,
+      "execution_count": 16,
       "outputs": [
         {
           "output_type": "stream",
@@ -641,7 +643,7 @@
       "metadata": {
         "id": "uWA44BDf92Xs"
       },
-      "execution_count": null,
+      "execution_count": 17,
       "outputs": []
     },
     {
@@ -658,9 +660,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "9N_SEO5894zo",
-        "outputId": "e2c08552-02ff-442f-cf85-60d3e6e7e931"
+        "outputId": "a6ce3aeb-dc1f-441a-84d1-5d6bd3dadae1"
       },
-      "execution_count": null,
+      "execution_count": 18,
       "outputs": [
         {
           "output_type": "stream",
@@ -678,7 +680,7 @@
       "metadata": {
         "id": "vKI0JKNy8tFl"
       },
-      "execution_count": null,
+      "execution_count": 18,
       "outputs": []
     }
   ],
